[package]
name = "cs260_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"



[[bin]]
name = "intervals"
path = "src/intervals.rs"

[[bin]]
name = "constants"
path = "src/constants.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "rdef"
path = "src/rdef.rs"

[[bin]]
name = "control"
path = "src/control.rs"